# ImageSonofication

./: .gitignore  README.md  pyproject.toml
img2sound/: __init__.py  cli.py
img2sound/core/: __init__.py  additive.py  audio.py  scanline.py  spectral.py
img2sound/io/: __init__.py  image.py  video.py
img2sound/utils/: __init__.py  helpers.py
tests/: __init__.py
